--- a/src/components/Section/styles.module.styl
+++ b/src/components/Section/styles.module.styl
@@ -3,10 +3,10 @@
   flex-direction column
   justify-content center
   align-items center
-  height 100vh
   background-color #f64740
   padding-left 300px
   img {
-    
+    width 100%
+    height auto
   }
 }
