made infinite scroll, a lot of bugs

--- a/src/components/Header/styles.module.styl
+++ b/src/components/Header/styles.module.styl
@@ -3,14 +3,14 @@
   flex-direction column
   justify-content center
   align-items center
-  background-color #22333b
+  background-color #fafafa
   height 95vh
   position relative
   z-index 1
 }
 
 .title {
-  color #fefefe
+  color #191919
   margin 0
   padding-bottom 50px
   font-size 80px
@@ -19,9 +19,24 @@
 }
 
 .subtitle {
-  color #fefefe
+  color #191919
   margin 0
   font-size 44px
   font-weight 400
   letter-spacing 1px
+}
+
+.arrow {
+  position absolute
+  width 70px
+  height 70px
+  border-radius 50%
+  background-color #22333b
+  color #fafafa
+  display flex
+  justify-content center
+  align-items center
+  font-size 40px
+  bottom 70px
+  cursor pointer
 }
