fix infinite scroll

--- a/src/components/Section/styles.module.styl
+++ b/src/components/Section/styles.module.styl
@@ -3,7 +3,7 @@
   flex-direction column
   justify-content center
   align-items center
-  background-color #f64740
+  background-color #fafafa
   img {
     width 100%
     height auto
