make title and subtitle responsive

--- a/src/components/Header/styles.module.styl
+++ b/src/components/Header/styles.module.styl
@@ -13,7 +13,7 @@
   color #191919
   margin 0
   padding-bottom 50px
-  font-size 80px
+  font-size 8vw
   font-weight 900
   letter-spacing 3px
 }
@@ -21,7 +21,7 @@
 .subtitle {
   color #191919
   margin 0
-  font-size 44px
+  font-size 5vw
   font-weight 400
   letter-spacing 1px
 }
