make arrow to work

--- a/src/components/Header/styles.module.styl
+++ b/src/components/Header/styles.module.styl
@@ -32,11 +32,14 @@
   height 70px
   border-radius 50%
   background-color #22333b
-  color #fafafa
+  color #fafafa !important
   display flex
   justify-content center
   align-items center
   font-size 40px
   bottom 70px
   cursor pointer
+  a {
+    color #fafafa !important
+  }
 }
