--- a/src/pages/home/sections/Section.module.styl
+++ b/src/pages/home/sections/Section.module.styl
@@ -4,6 +4,7 @@
   justify-content center
   align-items center
   background-color #fafafa
+  position relative
   img {
     width 100%
     height auto
