start adding animations

--- a/src/pages/home/sections/section/InfoBtn.module.styl
+++ b/src/pages/home/sections/section/InfoBtn.module.styl
@@ -3,3 +3,24 @@
   right 10px
   top 10px
 }
+
+
+
+.info-enter {
+  opacity: 0.01;
+}
+
+.info-enter.info-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.info-leave {
+  opacity: 1;
+}
+
+.info-leave.info-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
